# director

./: .gitignore  README.md  knowledge_transfer.txt  pyproject.toml  setup.py
producer/: __init__.py  automator.py  main.py
producer/apps/: __init__.py  base.py  registry.py  terminal.py
scripts/: hello_world.yml
